--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^1.0.0",
+    "gulp-beautify": "^2.0.0",
     "yeoman-generator": "^0.24.1",
     "yosay": "^1.0.0"
   },
