--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-crud",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "generates crud modules of mean stack or elasticsearch instead of mongodb",
   "homepage": "",
   "author": "Irakli Jishkariani <irakli2692@gmail.com>",
@@ -19,6 +19,7 @@
   "dependencies": {
     "chalk": "^1.0.0",
     "gulp-beautify": "^2.0.0",
+    "gulp-if": "^2.0.1",
     "lodash": "^4.14.1",
     "yeoman-generator": "^0.24.1",
     "yosay": "^1.0.0"
