--- a/generators/app/templates/project/config/default.yaml
+++ b/generators/app/templates/project/config/default.yaml
@@ -1,1 +1,6 @@
 port: 3000
+mongoDatabase: "mongodb://localhost:27017/<%= dbName %>"
+elastic:
+  host: "http://localhost:9200"
+  loggingLevel: "debug"
+
