--- a/package.json
+++ b/package.json
@@ -17,26 +17,26 @@
   },
   "license": "MIT",
   "dependencies": {
-    "chalk": "^1.0.0",
-    "gulp-beautify": "^2.0.0",
-    "gulp-if": "^2.0.1",
-    "lodash": "^4.14.1",
+    "chalk": "^1.1.3",
+    "gulp-beautify": "^2.0.1",
+    "gulp-if": "^2.0.2",
+    "lodash": "^4.17.2",
     "yeoman-generator": "^0.24.1",
-    "yosay": "^1.0.0"
+    "yosay": "^1.2.1"
   },
   "devDependencies": {
-    "yeoman-test": "^1.0.0",
-    "yeoman-assert": "^2.0.0",
-    "eslint": "^2.1.0",
+    "eslint": "^2.13.1",
     "eslint-config-xo-space": "^0.13.0",
-    "gulp": "^3.9.0",
-    "gulp-eslint": "^2.0.0",
-    "gulp-exclude-gitignore": "^1.0.0",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^2.1.0",
+    "gulp-exclude-gitignore": "^1.1.1",
+    "gulp-istanbul": "^0.10.4",
     "gulp-line-ending-corrector": "^1.0.1",
-    "gulp-istanbul": "^0.10.3",
-    "gulp-mocha": "^2.0.0",
-    "gulp-plumber": "^1.0.0",
-    "gulp-nsp": "^2.1.0"
+    "gulp-mocha": "^2.2.0",
+    "gulp-nsp": "^2.4.2",
+    "gulp-plumber": "^1.1.0",
+    "yeoman-assert": "^2.2.2",
+    "yeoman-test": "^1.6.0"
   },
   "eslintConfig": {
     "extends": "xo-space",
