--- a/generators/ng2_main/templates/public/src/tsconfig.app.json
+++ b/generators/ng2_main/templates/public/src/tsconfig.app.json
@@ -4,7 +4,7 @@
     "outDir": "../out-tsc/app",
     "module": "es2015",
     "baseUrl": "",
-    "types": ["@types/jquery", "@types/node"],
+    "types": ["@types/jquery", "@types/node", "@types/js-cookie"],
     "moduleResolution": "node"
   },
   "exclude": [
