--- a/generators/ng2_main/templates/public/package.json
+++ b/generators/ng2_main/templates/public/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "private-health-insurance-portal-front",
+  "name": "<%= name %>",
   "version": "0.0.0",
-  "license": "MIT",
+  "license": "<%= license %>",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
