--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "yosay": "^1.2.1"
   },
   "devDependencies": {
+    "chai": "^4.0.2",
     "eslint": "^2.13.1",
     "eslint-config-xo-space": "^0.13.0",
     "gulp": "^3.9.1",
